# thermulator

./: .gitignore  Dockerfile  README.md  ROBOT.md  build.sh  compile_commands.json  docker_attach.sh  docker_startup.sh  frames_2026-06-03_10.32.33.gv  rviz.sh  source.sh  start_sim.sh  tb3.bash  teleop.sh
docs/: ROBOT.md  demo_checklist.md  digital_twin_comm_test.md  digital_twin_comm_test_en.md  digital_twin_test_report.md  digital_twin_test_report.ms  frames.gv  rosbridge_and_dt_integration.md  rosgraph_1.dot  rosgraph_38.dot  technical_status.md  test_plan.md  topic_structure.md  untested_items.md
install/my_tb3_world/share/my_tb3_world/: package.ps1
install/tb3_test/share/tb3_test/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/tb3_test/share/tb3_test/cmake/: tb3_testConfig.cmake
install/thermocator/include/thermocator/: thermal_display.hpp  thermal_grid.hpp  world_init.hpp
install/thermocator/share/ament_index/resource_index/package_run_dependencies/: thermocator
install/thermocator/share/ament_index/resource_index/rviz_common__pluginlib__plugin/: thermocator
install/thermocator/share/thermocator/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/thermocator/share/thermocator/cmake/: thermocatorConfig.cmake
scripts/: dock.bash  generate_pdf.py  robot.bash
scripts/install/: completion.bash  setup.bash
src/install/: setup.ps1  setup.sh
src/log/: latest_build
src/my_tb3_world/: CMakeLists.txt  package.xml
src/my_tb3_world/config/: ros_gz_bridge.yaml
src/my_tb3_world/launch/: delta_thermulator.launch.py  new_world.launch.py  sim_with_bridge.launch.py
src/my_tb3_world/worlds/: new_world.world
src/tb3_test/: CMakeLists.txt  package.xml
src/tb3_test/src/: subscriber_lambda_function.cpp  test.cpp
src/thermocator/: .clangd  CMakeLists.txt  package.xml  plugin_description.xml
src/thermocator/archive/config/: nav2_thermal_params.yaml  slam_toolbox_params.yaml
src/thermocator/archive/launch/: navigation.launch.py
src/thermocator/archive/src/: thermal_layer.cpp  thermal_layer.hpp
src/thermocator/archive/worlds/: my_map.yaml
src/thermocator/config/: domain_bridge.yaml  nav2_slam_params.yaml  thermisual.rviz  thermocator_params.yaml
src/thermocator/include/thermal_broadcaster/: heat_zone.hpp
src/thermocator/include/thermocator/: action_grid.hpp  decision_node.hpp  map_builder.hpp  node_context.hpp  occupancy_grid_overlay.hpp  thermal_display.hpp  thermal_grid.hpp  world_init.hpp
src/thermocator/launch/: delta_thermal.launch.py  dt_integration.launch.py  thermic_bridge.launch.py  thermocator.launch.py  thermulator.launch.py
src/thermocator/src/: action_grid.cpp  advisory_node.cpp  battery_monitor.cpp  decision_node.cpp  dt_mediator.cpp  dt_safety_controller.cpp  goal_arbiter.cpp  map_builder.cpp  occupancy_grid_overlay.cpp  pose_sync.cpp  status_monitor.cpp  sync_monitor.cpp  thermal_broadcaster.cpp  thermal_display.cpp  thermal_grid.cpp  thermocator.cpp
src/thermocator_msgs/: CMakeLists.txt  package.xml
src/thermocator_msgs/msg/: GoalCandidate.msg  MissionState.msg
