<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>thermocator</name>
  <version>0.0.1</version>
  <description>Thermal Heat Mapping and Goal Pose Navigation</description>
  <maintainer email="s.zica@student.tue.nl">dreyffus</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ── Core dependencies (physical robot stack) ──────────────────────── -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- ── RViz2 display plugin ──────────────────────────────────────────── -->
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>pluginlib</depend>

  <!-- ── Digital twin nodes (only used when BUILD_DT=ON) ──────────────────
       ros_gz_interfaces is listed here so rosdep can resolve it on machines
       where the DT stack is built.  On physical-robot-only deployments this
       package will be present but its targets are never built.
       If Gazebo is not installed on the target machine, exclude this with:
         rosdep install - -ignore-packages-from-source - -skip-keys ros_gz_interfaces
  ──────────────────────────────────────────────────────────────────────── -->
  <depend>ros_gz_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
